tests/transpiler/x/hs/list_set_ops.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/list_set_ops.hs:4:19: error:
    Variable not in scope: union
  |
4 |     print ([1, 2] union [2, 3])
  |                   ^^^^^

/workspace/mochi/tests/transpiler/x/hs/list_set_ops.hs:5:22: error:
    Variable not in scope: except
  |
5 |     print ([1, 2, 3] except [2])
  |                      ^^^^^^

/workspace/mochi/tests/transpiler/x/hs/list_set_ops.hs:6:22: error:
    Variable not in scope: intersect
    Suggested fix: Perhaps use ‘interact’ (imported from Prelude)
  |
6 |     print ([1, 2, 3] intersect [2, 4])
  |                      ^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/list_set_ops.hs:7:26: error:
    Variable not in scope: union
  |
7 |     print (length [1, 2] union [2, 3])
  |                          ^^^^^
